[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Popup_building_info.gd" type="Script" id=1]
[ext_resource path="res://GFX/spr_nine_slice_box.png" type="Texture" id=2]
[ext_resource path="res://GFX/spr_nine_slice_box_2.png" type="Texture" id=3]
[ext_resource path="res://small_font_16.tres" type="DynamicFont" id=4]
[ext_resource path="res://GFX/add_worker_button.png" type="Texture" id=5]
[ext_resource path="res://GFX/close_button.png" type="Texture" id=6]

[node name="Popup_building_info" type="Control"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 96.0
margin_bottom = 64.0
rect_min_size = Vector2( 96, 64 )

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
margin_right = 96.0
margin_bottom = 64.0
texture = ExtResource( 2 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 96.0
margin_bottom = 64.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 8.0
margin_top = 5.0
margin_right = 88.0
margin_bottom = 59.0
rect_min_size = Vector2( 80, 50 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 18.0

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer"]
margin_right = 80.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 0
texture = ExtResource( 3 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="_name" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 5.0
margin_right = -6.0
margin_bottom = -6.0
custom_fonts/font = ExtResource( 4 )
text = "Building name"
align = 1
autowrap = true

[node name="Control2" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 80.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="add_worker" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer/Control2"]
margin_left = 24.0
margin_right = 56.0
margin_bottom = 32.0
texture_normal = ExtResource( 5 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 84.0
margin_top = -4.0
margin_right = 100.0
margin_bottom = 12.0
texture_normal = ExtResource( 6 )
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Control2/add_worker" to="." method="_on_add_worker_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
